Add family system and modular service configs
Refactors the plugin into a service-based structure, moving core managers into scoped service packages and introducing centralized config loading with per-feature YAML files. Adds major gameplay features including families (with invite/adoption rules and web export/server), love notes, ceremonies, rings, profiles, quests, leaderboards, partner buffs, and notification listeners, plus expanded `/marry` subcommands and a new `/family` command. Also migrates language/data resources into dedicated folders, updates PlaceholderAPI outputs, and bumps the release to 1.4.4 on Java 21.